@@ -2,3 +2,4 @@
 # Please use gui/control-panel to edit this file
 
 enable faststart
+enable work-now
