@@ -34,6 +34,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 # Future
 
 ## New Plugins
+- `work-now`: reduce the time that dwarves are left without a task after completing a job
 
 ## Fixes
 - `autoclothing`: eliminate game lag when there are many inventory items in the fort
